# mumen

./: .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  autocomp.sh  build-em.sh  build.sh  config.h.in  magnum_batch_install.sh  package.json  resources.conf
apps/: #main.cpp#  CMakeLists.txt  EmscriptenApplication.js  MyApplication.cpp  MyApplication.html
cmake/: dependencies.cmake  project_options.cmake  version.cmake
plugins/: CMakeLists.txt  dummy.cpp
src/: CMakeLists.txt  CV_Utils.cpp  TexturedShader.cpp  TexturedShader.h
tests/: CMakeLists.txt  test_plugins.cpp  test_runner.html
